--- a/godcode-seal-annotations/pom.xml
+++ b/godcode-seal-annotations/pom.xml
@@ -1,19 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <artifactId>godcode-seal</artifactId>
-    <groupId>godcode-seal</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>godcode-seal-annotations</groupId>
-  <artifactId>godcode-seal-annotations</artifactId>
-  <name>godcode-seal-annotations</name>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>godcode-seal</groupId>
-  		<artifactId>godcode-seal-core</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<artifactId>godcode-seal</artifactId>
+		<groupId>godcode-seal</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>godcode-seal-annotations</groupId>
+	<artifactId>godcode-seal-annotations</artifactId>
+	<name>godcode-seal-annotations</name>
+	<version>0.0.1-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>godcode-seal</groupId>
+			<artifactId>godcode-seal-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.functionaljava</groupId>
+			<artifactId>fj</artifactId>
+		</dependency>
+	</dependencies>
 </project>
