--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>godcode-seal-annotations</module>
 		<module>godcode-seal-core</module>
+		<module>godcode-seal-spring</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
